fix: overflow

--- a/travel/style.css
+++ b/travel/style.css
@@ -1,12 +1,8 @@
-html {
+/* html {
   min-width: 1440px;
-  /* overflow-x: hidden; */
   display: flex;
   justify-content: center;
-  /* background: #000000;
-  z-index: -20; */
-
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -19,6 +15,8 @@ html {
 body {
   width: 1440px;
   height: 3735px;
+  overflow-x: hidden;
+
   background: #FFFFFF;
   margin: 0;
   /* overflow: hidden; */
