--- a/travel/styleMobile.css
+++ b/travel/styleMobile.css
@@ -99,6 +99,9 @@
 
 .burger_navigation {
   position: relative;
+  width: 106px;
+  height: 176px;
+  
   top: 14px;
   left: 44px;
 }
@@ -121,6 +124,7 @@
 
   .main_container {
     position: relative;
+    z-index: 1;
   }
 
  .preview {
